# geo_mcp

./: LICENSE  README.md  SSE_MCP_README.md  config.yaml  pyproject.toml  requirements.txt  server.py  sse_client.html  sse_server.py
examples/: basic_usage.py
geo_mcp/: __main__.py
geo_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
geo_mcp/api/: gaode_api.py
geo_mcp/core/: data_processing.py  geo_distance.py  spatial_analysis.py
geo_mcp/data/: create.py
geo_mcp/tools/: registration.py
geo_mcp/utils/: config.py
mcp-client/: client.py  config.yaml  pyproject.toml  server.py  spatial_analysis.py
mcp-client/data/: geo_hotspot_data.csv
script/: install_sse_deps.py
